--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   },
   "devDependencies": {
     "@types/node": "22.15.12",
-    "@types/react": "19.1.3",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.21",
+    "@types/react-dom": "^18.3.7",
     "autoprefixer": "^10.4.14",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
