fix: add prisma generate to build script for Vercel deployment

--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -25,8 +25,8 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.3.21",
+    "@types/react-dom": "^18.3.7",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
