--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.7.0",
+    "@prisma/extension-accelerate": "^1.3.0",
     "bcrypt": "^5.1.1",
     "date-fns": "^4.1.0",
     "formidable": "^3.5.4",
